# agent_report

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  daily_report_state.json  deploy.sh  main.py  prompt_example.md  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.txt  run.sh
.github/workflows/: ci.yml  dependency-update.yml  release.yml
deployment/: .env.docker  .env.prod  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  mongo-init.js  requirements.in  requirements.txt  setup.sh  start.sh
gui/: gui_streamlit.py
src/agents/: agent_report.py  base_agent.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  interfaces.py
src/db/mongo/: mongo_db.py
src/llms/: gemini.py
src/logs/: logger.py
src/mcp/client/: gsheet_server.py
src/mcp/mcp_schema/: save_chat_history_DB.json
src/mcp/mcp_sever/: mcp_tool_adapter.py
src/mcp/schema/: get_information_ggSheet_url.json
src/mcp/server/: mcp_tool_adapter.py
src/notebook/: test_API_ggsheet.ipynb  test_agent.ipynb
src/prompt/: agent_report.md
src/prompts/: agent_report.md
src/scheduler/: __init__.py  reminder_service.py  report_checker.py  scheduler_service.py  state_manager.py
src/tools/: __init__.py  base_tool.py  get_data_ggSheet.py  get_information_from_url.py  save_chat_history_DB.py  send_slack_message.py  tool_registry.py
tests/: test_agents.py  test_api.py  test_config.py  test_tools.py
